* 2014-06-17 - martin.schneider@open-xchange.com

 - Fix for bug 33132: use encoded site url to get site content

* 2014-06-13 - tobias.friedrich@open-xchange.com

 - Fix for bug 33134: Don't auto-insert system-folder permission for possible non-visible parent folders when moving to trash  

* 2014-06-12 - thorben.betten@open-xchange.com

 - Fix for bug 32962: Use a fix-size look-ahead and only adjust if boundaries reached

* 2014-06-12 - marc.arens@open-xchange.com

 - Fix for bug Bug 33000: Abstain from transactions again to prevent cluster deadlock of documents
 
* 2014-06-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 33094: Invalidate folder and subfolders in cache folder storage on "clear" operation  

* 2014-06-11 - thorben.betten@open-xchange.com

 - Fix for bug 33061: Ignore alternative HTML part nested inside multipart/related part if text-only is user's preference

* 2014-06-11 - martin.herfurth@open-xchange.com

 - Fix for bug 32769: Show appointments for public folders just once.
 - Fix for bug 33092: Templating issue, bad lable width.

* 2014-06-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 33038: Check existence of default folder within same transaction 
 - Fix for bug 33066: Fall back to an empty JSON object on encountered exceptions during deserialization  

* 2014-06-10 - marc.arens@open-xchange.com

 - Fix for bug 32875: Properly clean distributed state and remove sequencenumber when resending to previously offline resource
 
* 2014-06-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 32946: Don't query trash folders when performing the "recently changed files" search
 - Fix for bug 32554: Exclude trash folders when searching without explicitly specified folder list
 - Fix for bug 33018: Don't consider folders below trash as "not seen in tree view" 

* 2014-06-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 32865: Don't anticipate upcoming ACKNOWLEDGE for the new version of server-side executed EDIT action 
