@@ -1,3 +1,7 @@
+* 2014-06-18 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 33182: Also consider trash folder in the file copy optimizer  
+
 * 2014-06-17 - martin.schneider@open-xchange.com
 
  - Fix for bug 33132: use encoded site url to get site content
